fix: disable PWA until next-pwa supports Turbopack

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,47 @@
-# Environment Variables - Pulse IA
-# Copy this file to .env and fill in the values
+# ===========================================
+# Pulse IA - Environment Variables
+# ===========================================
+# Copy this file to .env and fill in your values
+# NEVER commit .env to version control!
 
 # ===========================================
-# DATABASE
+# DATABASE (PostgreSQL)
 # ===========================================
-DATABASE_URL="postgresql://user:password@localhost:5432/pulse_ia?schema=public"
+# Get a free PostgreSQL database from:
+# - Vercel Postgres: https://vercel.com/storage/postgres
+# - Supabase: https://supabase.com
+# - Neon: https://neon.tech
+# - Railway: https://railway.app
+
+# Connection string with pooler (for serverless functions)
+DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require&pgbouncer=true"
+
+# Direct connection (for migrations, bypasses connection pooler)
+DIRECT_URL="postgresql://user:password@host:5432/database?sslmode=require"
 
 # ===========================================
 # AUTHENTICATION
 # ===========================================
-# JWT secret (generate with: openssl rand -base64 32)
-JWT_SECRET="your-super-secret-jwt-key-here"
-
-# Cookie settings
-COOKIE_NAME="pulse_session"
+# Generate a secure secret with: openssl rand -base64 32
+JWT_SECRET="your-super-secret-jwt-key-min-32-chars"
 
 # ===========================================
-# APPLICATION
+# OPENROUTER AI
 # ===========================================
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NODE_ENV="development"
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_API_KEY="sk-or-v1-your-api-key-here"
 
 # ===========================================
-# AI PROVIDER (Future)
+# APPLICATION URLs
 # ===========================================
-# OPENAI_API_KEY=""
-# ANTHROPIC_API_KEY=""
+# Your production domain (used for OpenRouter HTTP-Referer)
+NEXT_PUBLIC_APP_URL="https://your-domain.vercel.app"
+
+# Automatically set by Vercel (do not manually set):
+# VERCEL_URL - Preview deployment URL
+# VERCEL_ENV - development, preview, or production
+
+# ===========================================
+# NODE ENVIRONMENT
+# ===========================================
+NODE_ENV="production"
