--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,70 +11,25 @@
   "lang": "pt-BR",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ],
   "categories": ["business", "productivity"],
   "screenshots": [],
-  "shortcuts": [
-    {
-      "name": "Chat com IA",
-      "short_name": "Chat",
-      "description": "Abrir conversa com a assistente de RH",
-      "url": "/chat",
-      "icons": [{ "src": "/icons/chat-icon.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Minhas Férias",
-      "short_name": "Férias",
-      "description": "Ver saldo e solicitar férias",
-      "url": "/ferias",
-      "icons": [{ "src": "/icons/vacation-icon.png", "sizes": "96x96" }]
-    }
-  ]
+  "prefer_related_applications": false
 }
